--- a/ChmuryProj.Web/Components/Pages/ListaKomentarzy.razor
+++ b/ChmuryProj.Web/Components/Pages/ListaKomentarzy.razor
@@ -1,5 +1,8 @@
 ﻿@* Strona z listą komentarzy (np. KomentarzeList.razor) *@
 @page "/komentarze"
+
+@rendermode InteractiveServer
+
 @using ChmuryProj.Api.Entity
 @using System.Net.Http
 
